# phoenix_pharma

./: README.md  pyproject.toml
phoenix_pharma/: hooks.py  install.py  modules.txt  patches.txt  uninstall.py
phoenix_pharma/config/: desktop.py
phoenix_pharma/phoenix_pharma/client_scripts/: bom.js  delivery_note.js  job_card.js  material_request.js  packing_slip.js  production_plan.js  purchase_invoice.js  purchase_order.js  purchase_receipt.js  quality_inspection.js  sales_invoice.js  sales_order.js  stock_entry.js  work_order.js
phoenix_pharma/phoenix_pharma/custom/: bom.py  delivery_note.py  helper.py  material_request.py  naming.py  packing_slip.py  production_plan.py  purchase_receipt.py  sales_invoice.py  sales_order.py  stock_entry.py  work_order.py
phoenix_pharma/phoenix_pharma/doctype/assay_reading/: assay_reading.json  assay_reading.py
phoenix_pharma/phoenix_pharma/doctype/batch_coa/: batch_coa.json  batch_coa.py
phoenix_pharma/phoenix_pharma/doctype/control_number/: control_number.js  control_number.json  control_number.py  test_control_number.py
phoenix_pharma/phoenix_pharma/doctype/control_number_activity/: control_number_activity.json  control_number_activity.py
phoenix_pharma/phoenix_pharma/doctype/control_number_counter/: control_number_counter.js  (+3 more)
phoenix_pharma/phoenix_pharma/overrides/: purchase_receipt.py
phoenix_pharma/phoenix_pharma/utils/: api_purity_utils.py  control_number.py  label_utils.py  mrp_utils.py  scripts.py  utils.py
phoenix_pharma/templates/includes/: Approved.html  Sample.html  Under Test.html  quarantine.html
(+68 files in other folders)
